version 0.6.0 - currently working on
- [#828] Allow for more than 15 teams to be shown in list view (flexform)
- [#994] Make more fields exclude fields
- [#1638] Require PHP5
- [#1639] Updated copyright lines to 2008

version 0.5.0 - released on 2007-05-08
- Feature: Manual sorting for team leaders in list view (#329)
- Feature: Open detailed view in pop-up (#141)
- Feature: Added more information to the team records (#247)
- Code cleanup (#804)
- Feature: Allow to select the source of person selection in the BOX Module (#229)
- Change: Added info regarding kj_imagelightbox2 to the manual
- Change: Changed the maxItems for teamMembers to 9999 (#499)
- Feature: Added French translation, patch by Florian Elischer (#734)
- Fix: Dependecies in the EM fixed (#739)
- Fix: Sorting in the "grouped" list view (#732)

version 0.4.0 - released on 2007-04-08
- Feature: Added a jump menu to the list view (#704)
- Change: The "order by" field is now a drop-down field (#715)
- Feature: Make list style configurable through TS (#301)
- Feature: Added localization to the team records (#56)

version 0.3.1 - released on 2006-12-07
- Fix: Problem in ListView (#424)

version 0.3.0 - released on 2006-11-23
- Enhanced the manual (#328)
- Feature: Make names in list view be linked to single view (#251)
- Feature: Added configuration to ignore the backLink PID (for realURL) (#259)
- Added Selectorbox for list style (#233)
- Code cleanup and refactoring (#86)
- Fixed a small CSS issue (#249)
- Feature: Size limitations to pop-up images (#245)
- Feature: Different date formats for different fields in FE (#294)
- Feature: Different link targets depending on file type (#265)
- Added new screenshots to the manual (#253)
- Added sample realurl configuration (#258)
- Fixed localization bug in Backend (#252)

version 0.2.5 - released on 2006-08-24
- Added new dummy images (#231)
- Added CSS styles to beautify the back button (#230)
- Fixed wrong output when using the universal fields (#234)