@@ -274,7 +274,7 @@ $TCA['tx_bzdstaffdirectory_persons'] = Array (
 		)
 	),
 	'types' => array(
-		'0' => array('showitem' => 'hidden;;1;;1-1-1, last_name, first_name, title, email, phone, function, gender, date_birthdate, date_incompany, image, usergroups, location, room, officehours, tasks, opinion, files')
+		'0' => array('showitem' => 'hidden;;1;;1-1-1, last_name, first_name, title, email, phone, function, gender, date_birthdate, date_incompany, image, usergroups, location, room, officehours, tasks, opinion;;;richtext[paste|bold|italic|formatblock|class|left|center|right|orderedlist|unorderedlist|outdent|indent|link|image]:rte_transform[mode=ts_css], files')
 	),
 	'palettes' => array(
 		'1' => array('showitem' => '')
