@@ -1,4 +1,5 @@
 version 0.6.0 - currently working on
+- [#1080] Made the opinion field an RTE field
 - [#828] Allow for more than 15 teams to be shown in list view (flexform)
 - [#994] Make more fields exclude fields
 - [#1638] Require PHP5
